syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.github.omnbmh.grpc.proto.jdbc";

service GetJdbc {
	rpc getJdbc (JdbcRequest) returns (JdbcResponse) {}
}

message JdbcRequest{
	string name = 1;
}

message JdbcResponse {
	string jdbcurl = 1;
	string username = 2;
	string userpassword = 3;
	string driverclassname = 4;
}